fix scrolling and header on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -100,6 +100,8 @@
 
   .brand-logo {
     height: 140px;
+    padding: 0;
+    position: relative;
 
     img {
       height: 140px;
@@ -127,23 +129,23 @@
     z-index: 999;
   }
 
-  .brand-logo {
-    background: transparent;
-    padding: 5px;
-    position: fixed;
-    right: 0;
-    top: 0;
-    z-index: 1000;
-
-    img {
-      height: 84px;
-    }
-  }
-
   nav {
     background: rgba(255, 255, 255, .8);
     height: $header-height;
     width: calc(~'100% - 85px');
+  }
+}
+
+.brand-logo {
+  background: transparent;
+  padding: 5px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 1000;
+
+  img {
+    height: 84px;
   }
 }
 
